Added background to portfolio

--- a/css/body_modifications.css
+++ b/css/body_modifications.css
@@ -1,5 +1,7 @@
 body{
-    background: teal;
+    background-image: url("../images/portfolio-bcg.png");
+    background-repeat: repeat;
+    background-size: 500px;
 }
 
 #main_body_panel{
