--- a/css/body_modifications.css
+++ b/css/body_modifications.css
@@ -2,6 +2,8 @@ body{
     background-image: url("../images/portfolio-bcg.png");
     background-repeat: repeat;
     background-size: 500px;
+    background-attachment: fixed;
+    position: static;
 }
 
 #main_body_panel{
@@ -16,6 +18,7 @@ body{
     left: 0;
     right: 0;
     background-color: #ffffffdf;
+
 }
 
 #side_a{
