--- a/res/css/index.css
+++ b/res/css/index.css
@@ -1,6 +1,7 @@
 body {
     color: white;
     background: url("../img/argyle.png") repeat;
+    background-attachment: fixed;
 }
 
 .general-card {
